fixed nav bar on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -320,18 +320,19 @@ header {
 
 /* Nav */
 .nav {
-	display: inline-flex;
+	display: flex;
 	padding: 0;
 	margin: 0;
 	list-style: none;
 	flex-wrap: wrap;
+	justify-content: flex-start;
+	gap: 1em;
 }
-/* Default styles for desktop */
+
 .nav-item {
-    /* display: inline-block; */
-    margin-right: 1em;
-    font-size: 1.2em;
-    font-family: var(--nav-font);
+	font-size: 1.2em;
+	font-family: var(--nav-font);
+	white-space: nowrap;
 }
 
 .nav-item a[href] {
@@ -506,22 +507,10 @@ h3 {
 	margin-bottom: 10px;
 }
 
-/* For mobile screens */
-@media (max-width: 596px) {
-	/* For mobile phones: */
+/* @media (max-width: 375px) {
 	.nav-item {
-		/* display: inline-block; */
 		margin-right: 1em;
-		font-size: 0.8em; 
+		font-size: 1.2em; 
 		font-family: var(--nav-font);
 	}
-}
-@media (max-width: 375px) {
-	/* For mobile phones: */
-	.nav-item {
-		/* display: inline-block; */
-		margin-right: 1em;
-		font-size: 0.57em; 
-		font-family: var(--nav-font);
-	}
-}
+} */
